src/styles/FoodOrderPage.css
/* ... */
.cust-login-section .login-form input {
  outline: none;
  border: 3px solid #ffc400;
  font-size: 20px;
  padding: 5px 10px;
  border-radius: 10px;
}
.cust-login-section .login-form input[type="submit"] {
  outline: none;
  border: none;
  font-size: 25px;
  padding: 15px 10px;
  border-radius: 10px;
  margin-top: 50px;
  background: #ffc400;
  width: 100%;
  font-weight: 500;
  cursor: pointer;
}
.cust-signup-section {
  margin-bottom: 150px;
}
.cust-signup-section .signup-form {
  display: flex;
  justify-content: center;
  /* width: 1000px; */
}
.cust-signup-section .signup-form .form-group {
  display: flex;
  flex-direction: column;
  margin-top: 30px;
  margin-bottom: 10px;
}
.cust-signup-section .signup-form form .col-1 {
  display: grid;
  grid-template-columns: auto auto;
  column-gap: 100px;
}
.cust-signup-section .signup-form label {
  font-size: 25px;
  font-weight: 500;
  margin-bottom: 10px;
}
.cust-signup-section .signup-form input {
  outline: none;
  border: 3px solid #ffc400;
  font-size: 20px;
  padding: 5px 10px;
  border-radius: 10px;
}
.cust-signup-section .signup-form input[type="submit"] {
  outline: none;
  border: none;
  font-size: 25px;
  padding: 15px 10px;
  border-radius: 10px;
  margin-top: 50px;
  background: #ffc400;
  width: 100%;
  font-weight: 500;
  cursor: pointer;
}

/* custom */
.delete-img-btn {
  position: absolute;
  right: 0px;
  top: -18px;
  font-weight: bolder;
  font-size: 15px;
  z-index: 9999;
  color: black;
  cursor: pointer;
}
.venue-detail-list-item {
  cursor: pointer;
}
.input-border,
.input-border:focus {
  border: 3px solid #ffc400;
}

.color-background-text {
  background-image: linear-gradient(45deg, #ffc400, #000000);
  background-clip: text;
  color: transparent;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}
.card,
.custom-card {
  transition: all 0.2s ease-in-out;
}
.card img,
.card {
  border-top-left-radius: 20px !important;
  border-top-right-radius: 20px !important;
}
.scale-bigger:hover {
  transform: scale(1.1);
}
.hall-marquee-page-arrow {
  margin-left: 200px;
}
.hall-marquee-page-arrow img {
  transform: rotate(180deg);
}
.cart-color {
  color: #ffc400;
}
.profile {
  cursor: pointer;
}
.manage-buttons {
  height: 40vh;
}
.app-background1 {
  background-color: #ffc400;
  height: 100vh !important;
  background-repeat: no-repeat !important;
  background-attachment: fixed !important;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: -99 !important;
  opacity: 0.3;
}
.outter-box {
  z-index: 99 !important;
}
.app-background1 {
  background: #ffc400 no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.app-background,
.app-background2 {
  position: fixed;
  height: 100vh;
  opacity: 0.1;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: -10;
  top: 0px;
  left: 0px;
}
.app-background img,
.app-background2 img {
  width: 100vw;
  height: 100vh;
}
.app-background2 {
  opacity: 0.2;
}

.food-itemimage img {
  width: 100%;
}

